quoting-CypressTK1/force-app/main/default/objects/ProvusProductMapping__mdt/ProvusProductMapping__mdt.object-meta.xml
<CustomObject>
    <description
	>Provus Product Mappings custom metadata object to store the field mapping between Product2 and Product__c object</description>
    <label>Provus Product Mapping</label>
    <pluralLabel>Provus Product Mappings</pluralLabel>
</CustomObject>