quoting-CypressTK1/force-app/main/default/objects/ProvusProductMapping__mdt/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <description>Provus Product Field Name to map with Product2 field name</description>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>