quoting-CypressTK1/force-app/main/default/objects/ProvusProductMapping__mdt/fields/Product2FieldName__c.field-meta.xml
<CustomField>
    <fullName>Product2FieldName__c</fullName>
    <description>Product2 Field Name</description>
    <label>Product2 Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>