quoting-CypressTK1/force-app/main/default/objects/ProvusProductMapping__mdt/fields/ProvusSetupId__c.field-meta.xml
<CustomField>
    <fullName>ProvusSetupId__c</fullName>
    <description
	>Relationship of Product Mapping custom metadata record to parent Provus setup custom metadata record</description>
    <inlineHelpText
	>Relationship of product mapping record to parent Provus setup record</inlineHelpText>
    <label>Provus Setup</label>
    <referenceTo>ProvusSetup__mdt</referenceTo>
    <relationshipLabel>Provus Product Mappings</relationshipLabel>
    <relationshipName>ProvusProductMappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>